Version 0.2 -- January 02, 2000
-------------------------------
- Attachment support (better MIME support in general)


Version 0.1.2  -- December 20, 1999
-----------------------------------
- Date translation to local time
- Rewrote folder fetching code universally
- Added attachment detection (no downloads yet)
- Fixed many minor bugs that were reported

Version 0.1.1  -- December 16, 1999
-----------------------------------
- Reworked all the IMAP functions to make them RFC 2060 compliant
  (should work with all IMAP servers)
- Added color customization
- Sorted folder list (on left bar)
- Added MUCH better error correction and notification

Version 0.1 -- December 14, 1999
--------------------------------
- Message composing (with to, cc, bcc)
- Message viewing, including HTML messages
- Basic MIME support, no attachments...yet
- Message sorting by Date, Name, or subject
- Folder manipulation (deleting, creating, moving, and renaming)
- IMAP email (currently only Cyrus IMAP server has been tested)
- Many other features that are basic email functionality