@@ -1,6 +1,7 @@
 Version 0.2 -- January 02, 2000
 -------------------------------
 - Attachment support (better MIME support in general)
+- Themeable support replaced Custom Colors.  Themes are pluggable.
 
 
 Version 0.1.2  -- December 20, 1999
